--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="/myScript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -11,28 +12,27 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="contenedor">
+    <div class="container-wrapper">
         <div class="topImg">
-            <img src="/src/ce_quantum.png" alt="imagen">
+              <img src="/src/ce_quantum.png" alt="imagen">
         </div>
         <div class="challengers">
-            <h1>SERRANO vs POZUELO <i class="fas fa-info-circle"></i></h1>
+            <h1>SERRANO vs POZUELO <button onClick="showPopup()"><i class="fas fa-info-circle"></i></button></h1>
         </div>
-        <div id="chart-bars">
-        </div>
+        <div id="chart-bars"></div>
         <div class="solo-clasif-wrapper">
             <div class="solo-clasif">
-                <span class="medal-wrapper"><i class="fas fa-medal"></i></span> <h1> Ver clasificación individual</h1>
+                <a class="medal-wrapper"><i class="fas fa-medal"></i></a> 
+                <h2>Ver clasificación individual</h2>
             </div>
         </div>
-        <div>
-            <hr>
+        <hr>
+        <div class="co2">
+            <h1>Reducción de Co2 eq. <i class="fas fa-seedling"></i></h1>
+            <div id="chart-circle"></div>
         </div>
-            <div class="co2">
-                <h1>Reducción de Co2 eq.</h1>
-                <div id="chart-circle"></div>
-            </div>
-        </div>
+        <div class="pop-up hidden"></div>
+    </div>
 </body>
 <script src="/node_modules/apexcharts/dist/apexcharts.js"></script>
 <script>
